gateway-components/24-gateway/namespace.yaml
### namespace for cross namespace gateway objects
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    name: infra
    shared-gateway-access: "true"
