gateway-components/24-gateway/3-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: infra
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
  - name: tls
    port: 443
    protocol: TLS
    allowedRoutes:
      namespaces:
        from: Selector
        nodeSelector:
          matchLabels:
            shared-gateway-access: true
    tls:
      mode: Passthrough
